--- a/Movie_Exercise/Views/Cart/ViewCart.cshtml
+++ b/Movie_Exercise/Views/Cart/ViewCart.cshtml
@@ -63,15 +63,15 @@
 
 
 
-@*form comes after checkout button clicked
-*@<div class="form-body" id="checkout-form" style="display:none;">
+@*form comes after checkout button clicked*@
+<div class="form-body" id="checkout-form" style="display:none;">
     <div class="row">
         <div class="form-holder">
             <div class="form-content">
                 <div class="form-items">
                     <h3>Register Today</h3>
                     <p>Fill in the data below.</p>
-                    <form class="requires-validation" id="form-data" novalidate>
+                    <form class="requires-validation" id="form-data"  method="POST" novalidate>
                         <div class="col-md-12">
                                 <input class="form-control" type="email" id="email" name="EmailAddress" placeholder="E-mail Address" required>
                                 <div class="valid-feedback">
@@ -130,7 +130,7 @@
                             <div class="invalid-feedback">Phone Number field cannot be blank!</div>
                         </div>
                         <div class="form-button mt-3">
-                            <button onclick="CheckCustomer()" id="submit" type="submit" class="btn btn-primary">Continue</button>
+                            <button id="submit" type="submit" class="btn btn-primary" onclick="CheckCustomer()">Continue</button>
                         </div>
                     </form>
                 </div>
@@ -139,6 +139,169 @@
     </div>
 </div>
 
+
+
+
+<div class="form-body" id="payment-form" style="display:none;">
+        <div class="row">
+            <div class="col-lg-4 mb-lg-0 mb-3">
+                <div class="card p-3">
+                    <div class="img-box">
+                        <img src="https://www.freepnglogos.com/uploads/visa-logo-download-png-21.png" alt="">
+                    </div>
+                    <div class="number">
+                        <label class="fw-bold" for="">**** **** **** 1060</label>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <small><span class="fw-bold">Expiry date:</span><span>10/16</span></small>
+                        <small><span class="fw-bold">Name:</span><span>Kumar</span></small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-lg-0 mb-3">
+                <div class="card p-3">
+                    <div class="img-box">
+                        <img src="https://www.freepnglogos.com/uploads/mastercard-png/file-mastercard-logo-svg-wikimedia-commons-4.png"
+                            alt="">
+                    </div>
+                    <div class="number">
+                        <label class="fw-bold">**** **** **** 1060</label>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <small><span class="fw-bold">Expiry date:</span><span>10/16</span></small>
+                        <small><span class="fw-bold">Name:</span><span>Kumar</span></small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-lg-0 mb-3">
+                <div class="card p-3">
+                    <div class="img-box">
+                        <img src="https://www.freepnglogos.com/uploads/discover-png-logo/credit-cards-discover-png-logo-4.png"
+                            alt="">
+                    </div>
+                    <div class="number">
+                        <label class="fw-bold">**** **** **** 1060</label>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <small><span class="fw-bold">Expiry date:</span><span>10/16</span></small>
+                        <small><span class="fw-bold">Name:</span><span>Kumar</span></small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 mt-4">
+                <div class="card p-3">
+                    <p class="mb-0 fw-bold h4">Payment Methods</p>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="card p-3">
+                    <div class="card-body border p-0">
+                        <p>
+                            <a class="btn btn-primary w-100 h-100 d-flex align-items-center justify-content-between"
+                                data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="true"
+                                aria-controls="collapseExample">
+                                <span class="fw-bold">PayPal</span>
+                                <span class="fab fa-cc-paypal">
+                                </span>
+                            </a>
+                        </p>
+
+                        <div class="collapse p-3 pt-0" id="collapseExample">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="h4 mb-0">Summary</p>
+                                <p class="mb-0"><span class="fw-bold">Product:</span><span class="c-green">@Model.Sum(i => i.Quantity) </span></p>
+                                    <p class="mb-0"><span class="fw-bold">Price:</span><span class="c-green">:$@Model.Sum(i => i.CartItemTotal())</span>
+                                </p>
+                                    <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                                        nihil neque
+                                        quisquam aut
+                                        repellendus, dicta vero? Animi dicta cupiditate, facilis provident quibusdam ab
+                                        quis,
+                                        iste harum ipsum hic, nemo qui!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body border p-0">
+                        <p>
+                            <a class="btn btn-primary p-2 w-100 h-100 d-flex align-items-center justify-content-between"
+                                data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="true"
+                                aria-controls="collapseExample">
+                                <span class="fw-bold">Credit Card</span>
+                                <span class="">
+                                    <span class="fab fa-cc-amex"></span>
+                                    <span class="fab fa-cc-mastercard"></span>
+                                    <span class="fab fa-cc-discover"></span>
+                                </span>
+                            </a>
+                        </p>
+                        <div class="collapse show p-3 pt-0" id="collapseExample">
+                            <div class="row">
+                                <div class="col-lg-5 mb-lg-0 mb-3">
+                                    <p class="h4 mb-0">Summary</p>
+                                <p class="mb-0">
+                                    <span class="fw-bold">Product:</span><span class="c-green">: @Model.Sum(i => i.Quantity)</span>
+                                </p>
+                                
+                                    <p class="mb-0">
+                                        <span class="fw-bold">Price:</span>
+                                        <span class="c-green">:$@Model.Sum(i => i.CartItemTotal())</span>
+                                    </p>
+                                    <p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+                                        nihil neque
+                                        quisquam aut
+                                        repellendus, dicta vero? Animi dicta cupiditate, facilis provident quibusdam ab
+                                        quis,
+                                        iste harum ipsum hic, nemo qui!</p>
+                                </div>
+                                <div class="col-lg-7">
+                                    <form action="" class="form">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="form__div">
+                                                    <input type="text" class="form-control" placeholder=" ">
+                                                    <label for="" class="form__label">Card Number</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-6">
+                                                <div class="form__div">
+                                                    <input type="text" class="form-control" placeholder=" ">
+                                                    <label for="" class="form__label">MM / yy</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-6">
+                                                <div class="form__div">
+                                                    <input type="password" class="form-control" placeholder=" ">
+                                                    <label for="" class="form__label">cvv code</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form__div">
+                                                    <input type="text" class="form-control" placeholder=" ">
+                                                    <label for="" class="form__label">name on the card</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="btn btn-primary w-100">Sumbit</div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="btn btn-primary payment">
+                    Make Payment
+                </div>
+            </div>
+        </div>
+</div>
 
 
 
@@ -187,7 +350,7 @@
         }
 
 
-        // toget button to check out form
+        // Toget button to checkout form
         function toggleForm() {
             const form = document.getElementById("checkout-form");
             if (form.style.display === "none") {
@@ -196,6 +359,8 @@
                 form.style.display = "none";
             }
         }
+
+        
 
         //Add jQuery and the following script to your view
         document.getElementById("email").addEventListener("keyup", checkEmail);
@@ -228,18 +393,25 @@
         function CheckCustomer(){
             var requestUrl = "/Cart/CheckCustomer/";
             var formData = $("#form-data").serialize();
+            debugger;
             $.ajax({
                 type: "POST",
                 url: requestUrl,
                 dataType: "json",
                 cach: false,
                 data: formData,
-                 success: function (response) {
-                console.log(response);
-            },
-            error: function (xhr, status, error) {
-                console.log(error);
-            }
+                success: function (resopnse) {
+                        consloe.log("payment test here")
+                        const form = document.getElementById("payment-form");
+                        if (form.style.display === "none") {
+                            form.style.display = "block";
+                        } else {
+                            form.style.display = "none";
+                        }
+                },
+                error: function (xhr, status, error) {
+                    console.log(error);
+                }
             })
         }
     </script>
